Fix weird vertical spacing rendering on resources page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5225,7 +5225,8 @@ a.thumbnail.active {
 }
 .list-group-item {
   position: relative;
-  display: block;
+  display: inline-block;
+  width: 100%;
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: rgba(255, 255, 255, 0.7);
